Production/Production/src/objects/Callback_Form__c.object
<CustomObject>
    <description>Initially used for Social Media cases, this online form feeds into Salesforce to allow agents to schedule callbacks against cases.</description>
    <fields>
        <fullName>CLI__c</fullName>
        <label>CLI</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Callback_Date__c</fullName>
        <label>Callback Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Callback_Time__c</fullName>
        <label>Callback Time</label>
        <picklist>
            <controllingField>Preferred_Contact_Time__c</controllingField>
            <picklistValues>
                <fullName>Morning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afternoon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evening</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Number__c</fullName>
        <description>Case Number received from Online form.</description>
        <label>Case Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Callback Forms</relationshipLabel>
        <relationshipName>Callback_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <label>Customer?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Phone_Number__c</fullName>
        <label>Home Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Contact_Number__c</fullName>
        <label>Preferred Contact Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Preferred_Contact_Time__c</fullName>
        <label>Preferred Contact Time</label>
        <picklist>
            <picklistValues>
                <fullName>Within the hour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schedule Callback</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Social_Media_Account_Name__c</fullName>
        <description>Social Media Account Name ie Twitter ID, Facebook Name, Forum Name.</description>
        <inlineHelpText>Social Media Account Name ie Twitter ID, Facebook Name, Forum Name</inlineHelpText>
        <label>Social Media Account Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trio_Account_Number__c</fullName>
        <label>Trio Account Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Callback Form</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Case_Number__c</columns>
        <columns>Case__c</columns>
        <columns>Social_Media_Account_Name__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Home_Phone_Number__c</columns>
        <columns>Preferred_Contact_Number__c</columns>
        <columns>Preferred_Contact_Time__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>New_status</fullName>
        <columns>NAME</columns>
        <columns>Social_Media_Account_Name__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Home_Phone_Number__c</columns>
        <columns>Preferred_Contact_Number__c</columns>
        <columns>Preferred_Contact_Time__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>New</label>
    </listViews>
    <nameField>
        <displayFormat>CB-{0000000}</displayFormat>
        <label>Callback Form Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Callback Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>